<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"
            app:showAsAction="withText" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile" />

        <item
            android:id="@+id/gallery"
            android:icon="@drawable/baseline_photo_library_24"
            android:title="Gallery" />

        <item
            android:id="@+id/result"
            android:icon="@drawable/baseline_receipt_long_24"
            android:title="@string/result" />

        <item
            android:id="@+id/student"
            android:icon="@drawable/baseline_people_24"
            android:title="@string/student" />

        <item
            android:id="@+id/about_us"
            android:icon="@drawable/baseline_assignment_24"
            android:title="@string/about_us" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout" />

    </group>

</menu>
